--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -13,34 +13,10 @@ Content table
 2. Custom
 
 /* ----- 1. Basics ----- */
-.blocker {
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	z-index: 15;
-	box-sizing: border-box;
-	background-color: rgba(0,0,0,0);
-	text-align: center
-}
-.blocker:before {
-	content: "";
-	display: inline-block;
-	height: 100%;
-	vertical-align: middle;
-	margin-right: -0.05em
-}
-.blocker.behind {
-	background-color: transparent
-}
 .modal {
-	display: none;
-	vertical-align: bottom;
-	position: relative;
+	display: initial;
+	position: fixed;
+	bottom: 0;
 	z-index: 10;
 	box-sizing: border-box;
 	width: 100%;
@@ -67,10 +43,10 @@ Content table
 	height: 15px;
 	opacity: 0.4;
 	text-indent: -9999px;
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-image: url('//www.tastal.ml/img/cross.png');
+}
+.close-modal svg{
+	fill:#666;
+	float: right;
 }
 @-webkit-keyframes sk-stretchdelay {
 	0%,
@@ -96,8 +72,6 @@ Content table
 }
 
 /* ----- modal-addPhoto ----- */
-.modalAddPhoto{
-}
 .modalAddPhoto ul{
 	list-style:none;
 }
